[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
excluse = '''

(
  /(
      \.git          # root of the project
    | \.tox          # unit test results
    | \.venv         # python virtual environment
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"